# codex-telegram-bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  MODULE_DEVELOPMENT_PLAYBOOK.md
schedule_bot/: __init__.py  __main__.py  app.py  config.py  handlers.py  health.py  responses.py  tarot_analysis.py  tarot_cards.py  tarot_sessions.py
schedule_bot/assets/cards/: README.md
scripts/: bootstrap.ps1  verify.ps1
tests/: test_app.py  test_config.py  test_handlers.py  test_health.py  test_module_development_playbook.py  test_responses.py  test_tarot_analysis.py  test_tarot_cards.py  test_tarot_sessions.py
